--- a/06-Linear-Regression/01_Linear_Regression.ipynb
+++ b/06-Linear-Regression/01_Linear_Regression.ipynb
@@ -523,10 +523,8 @@
     "x_actual = point[0]\n",
     "y_actual = point[1]\n",
     "\n",
-    "prediction = m_hat*x_actual + b_hat\n",
+    "prediction = m_hat * x_actual + b_hat\n",
     "print(\"Prediction\", prediction)\n",
-    "\n",
-    "b_hat = model.intercept_\n",
     "\n",
     "# Plot the points\n",
     "plt.scatter(df.Farenheit, df.Dollars)\n",
@@ -542,7 +540,7 @@
     "plt.title(\"Ice Cream Sales and Temperature\")\n",
     "\n",
     "# Plot the error\n",
-    "plt.arrow(x_actual, y_actual, 0, prediction-600, color='black')\n",
+    "plt.arrow(x_actual, y_actual, 0, prediction-600, color='r')\n",
     "plt.show()"
    ]
   },
