--- a/06-Linear-Regression/02_Polynomial_Log_linear_Regression.ipynb
+++ b/06-Linear-Regression/02_Polynomial_Log_linear_Regression.ipynb
@@ -1182,7 +1182,8 @@
     "x_columns = df.columns.drop('ln_price')\n",
     "\n",
     "# Only plot the scatterplot of x variables with our y variable\n",
-    "sns.pairplot(data=df, y_vars=['ln_price'], x_vars=x_columns, plot_kws={'alpha': 0.1, 'linewidth':0})"
+    "sns.pairplot(data=df, y_vars=['ln_price'], x_vars=x_columns,\n",
+    "             plot_kws={'alpha': 0.1, 'linewidth':0})"
    ]
   },
   {
@@ -1194,7 +1195,7 @@
    "source": [
     "## 2) Make coefficients easier to interpret\n",
     "\n",
-    "Transforming our price values in this way won't change our model's ability to generate predictions, but what it **will** do is change the interpretation of all of our x-coefficients. This will change our x-coefficients from have an elasticity type interpretation (a raw dollar amount change if there is a 1 unit increase in x) to having a percentage-terms interpretation. Lets demonstrate and talk about this further. "
+    "Transforming our price values in this way won't change our model's ability to generate predictions, but what it **will** do is change the interpretation of all of our x-coefficients. This will change our x-coefficients from having an elasticity type interpretation (a raw dollar amount change if there is a 1 unit increase in x) to having a percentage-terms interpretation. Lets demonstrate and talk about this further."
    ]
   },
   {
