--- a/07-Advanced-Regression/04_Ridge_Regression.ipynb
+++ b/07-Advanced-Regression/04_Ridge_Regression.ipynb
@@ -1625,7 +1625,7 @@
  ],
  "metadata": {
   "jupytext": {
-   "formats": "ipynb,auto:light"
+   "formats": "ipynb,py:light"
   },
   "kernelspec": {
    "display_name": "Python 3",
