--- a/07-Advanced-Regression/02_Survival_Analysis.ipynb
+++ b/07-Advanced-Regression/02_Survival_Analysis.ipynb
@@ -14,7 +14,6 @@
    "outputs": [],
    "source": [
     "# !pip install lifelines\n",
-    "\n",
     "import lifelines\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt # version > 3.0\n",
@@ -58,9 +57,7 @@
    "metadata": {},
    "source": [
     "#  Overview\n",
-    "The aim of survival analysis is to analyze the effect of different risk factors and use them to predict the duration of time between one event (\"birth\") and another (\"death\"). It was first developed by actuaries and medical professionals to predict (as its name implies) how long individuals would survive. However, it has expanded into include many different applications.\n",
-    "* it is referred to as **reliability analysis** in engineering\n",
-    "* it can be referred to more generally as **time-to-event analysis**\n",
+    "Survival analysis (AKA  **time-to-event analysis** or **reliability analysis** in engineering) is to analyze the effect of different risk factors and use them to predict the duration of time between one event (\"birth\") and another (\"death\"). It was first developed by actuaries and medical professionals to predict (as its name implies) how long individuals would survive. However, it has expanded into include many different applications.\n",
     "\n",
     "In the general sense, it can be thought of as a way to model anything with a finite duration - retention, churn, completion, etc. The culmination of this duration may have a \"good\" or \"bad\" (or \"neutral\") connotation, depending on the situation. However old habits die hard, so most often it is called survival analysis and the following definitions are still commonly used:\n",
     "\n",
@@ -760,7 +757,7 @@
     }
    ],
    "source": [
-    "# investigate continuous feature, must bin with 'values'\n",
+    "# investigate continuous feature, must bin with 'values' argument\n",
     "cph.plot_covariate_groups(covariate='logWBC', values=np.arange(1.5,5,.5));"
    ]
   },
