--- a/08-Model-Validation/01_Begin_modeling_process.ipynb
+++ b/08-Model-Validation/01_Begin_modeling_process.ipynb
@@ -21,16 +21,16 @@
     "import warnings\n",
     "\n",
     "# !conda install -c conda-forge category_encoders\n",
-    "import category_encoders as ce # NEW!\n",
+    "import category_encoders as ce #----------------------NEW!\n",
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
     "import pandas as pd\n",
     "from sklearn.exceptions import DataConversionWarning\n",
     "from sklearn.linear_model import LogisticRegression\n",
-    "from sklearn.model_selection import train_test_split\n",
     "from sklearn.model_selection import cross_val_score #-NEW!\n",
+    "from sklearn.model_selection import train_test_split\n",
     "from sklearn.metrics import accuracy_score\n",
-    "from sklearn.metrics import roc_auc_score #-----------NEW! Explained more in next notebook\n",
+    "from sklearn.metrics import roc_auc_score #-----------NEW! (more in next notebook)\n",
     "from sklearn.pipeline import make_pipeline #----------NEW!\n",
     "from sklearn.preprocessing import StandardScaler\n",
     "\n",
@@ -44,7 +44,7 @@
    "source": [
     "# Example: Bank Marketing dataset\n",
     "\n",
-    "You have several ways you can get the dataset:\n",
+    "Get the dataset:\n",
     "\n",
     "#### Kaggle\n",
     "- Download from the [Kaggle competition page](https://www.kaggle.com/c/ds2-model-validation/data)\n",
