--- a/08-Model-Validation/04a_Feature_Selection.ipynb
+++ b/08-Model-Validation/04a_Feature_Selection.ipynb
@@ -7,14 +7,34 @@
     "id": "EktuEhKabPw1"
    },
    "source": [
-    "_Lambda School Data Science - Model Validation_\n",
-    "\n",
-    "\n",
     "# Feature Selection\n",
     "\n",
     "Objectives:\n",
     "* Feature importance\n",
     "* Feature selection "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "from sklearn.ensemble import RandomForestClassifier as RFC #---NEW!\n",
+    "from sklearn.ensemble import RandomForestRegressor as RFR #----NEW!\n",
+    "from sklearn.ensemble import ExtraTreesClassifier as ETC #-----NEW!\n",
+    "from sklearn.ensemble import ExtraTreesRegressor as ETR #------NEW!\n",
+    "from sklearn.feature_selection import RFECV #------------------NEW!\n",
+    "from sklearn.feature_selection import SelectFromModel #--------NEW!\n",
+    "from sklearn.feature_selection import SelectKBest\n",
+    "from sklearn.feature_selection import SelectFpr #--------------NEW!\n",
+    "from sklearn.feature_selection import mutual_info_classif #----NEW!\n",
+    "from sklearn.feature_selection import mutual_info_regression #-NEW!\n",
+    "from sklearn.linear_model import LinearRegression\n",
+    "from sklearn.linear_model import LogisticRegression\n",
+    "from sklearn.preprocessing import MinMaxScaler #---------------NEW!"
    ]
   },
   {
@@ -125,15 +145,12 @@
    },
    "outputs": [],
    "source": [
-    "# import\n",
-    "import numpy as np\n",
-    "\n",
     "# Create the dataset\n",
     "# from https://blog.datadive.net/selecting-good-features-part-iv-stability-selection-rfe-and-everything-side-by-side/\n",
     "\n",
     "np.random.seed(42)\n",
     "\n",
-    "size = 1500 # I increased the size from what's given in the link\n",
+    "size = 1500 # increased size from what's given in the link\n",
     "Xs = np.random.uniform(0, 1, (size, 14)) \n",
     "# Changed variable name to Xs to use X later\n",
     " \n",
@@ -324,8 +341,7 @@
    ],
    "source": [
     "# Putting it into pandas--because... I like pandas. And usually you'll be\n",
-    "# working with dataframes not arrays (you'll care what the column titles are)\n",
-    "import pandas as pd\n",
+    "# working with dataframes not arrays (you'll care what the column titles are\n",
     "\n",
     "friedmanX = pd.DataFrame(data=Xs, columns=names)\n",
     "friedmanY = pd.Series(data=Y, name='Y')\n",
@@ -747,9 +763,7 @@
     }
    ],
    "source": [
-    "import sklearn.feature_selection as fe\n",
-    "\n",
-    "MIR = fe.SelectKBest(fe.mutual_info_regression, k='all').fit(X, y)\n",
+    "MIR = SelectKBest(mutual_info_regression, k='all').fit(X, y)\n",
     "\n",
     "MIR_scores = pd.Series(data=MIR.scores_, name='MI_Reg_Scores', index=names)\n",
     "\n",
@@ -821,7 +835,7 @@
     }
    ],
    "source": [
-    "MIC_b = fe.SelectFpr(fe.mutual_info_classif).fit(X, y_bal)\n",
+    "MIC_b = SelectFpr(mutual_info_classif).fit(X, y_bal)\n",
     "\n",
     "MIC_b_scores = pd.Series(data=MIC_b.scores_, \n",
     "                              name='MIC_Bal_Scores', index=names)\n",
@@ -880,7 +894,7 @@
     }
    ],
    "source": [
-    "MIC_u = fe.SelectFpr(fe.mutual_info_classif).fit(X, y_un)\n",
+    "MIC_u = SelectFpr(mutual_info_classif).fit(X, y_un)\n",
     "\n",
     "MIC_u_scores = pd.Series(data=MIC_u.scores_, \n",
     "                              name='MIC_Unbal_Scores', index=names)\n",
@@ -984,8 +998,6 @@
     }
    ],
    "source": [
-    "from sklearn.ensemble import RandomForestRegressor as RFR\n",
-    "\n",
     "# Fitting a random forest regression\n",
     "rfr = RFR().fit(X, y)\n",
     "\n",
@@ -1054,8 +1066,6 @@
     }
    ],
    "source": [
-    "from sklearn.ensemble import RandomForestClassifier as RFC\n",
-    "\n",
     "# Fitting a Random Forest Classifier\n",
     "rfc_b = RFC().fit(X, y_bal)\n",
     "\n",
@@ -1158,21 +1168,21 @@
    "source": [
     "# Random forest regression transformation of X (elimination of least important\n",
     "# features)\n",
-    "rfr_transform = fe.SelectFromModel(rfr, prefit=True)\n",
+    "rfr_transform = SelectFromModel(rfr, prefit=True)\n",
     "\n",
     "X_rfr = rfr_transform.transform(X)\n",
     "\n",
     "\n",
     "# Random forest classifier transformation of X_bal (elimination of least important\n",
     "# features)\n",
-    "rfc_b_transform = fe.SelectFromModel(rfc_b, prefit=True)\n",
+    "rfc_b_transform = SelectFromModel(rfc_b, prefit=True)\n",
     "\n",
     "X_rfc_b = rfc_b_transform.transform(X)\n",
     "\n",
     "\n",
     "# Random forest classifier transformation of X_un (elimination of least important\n",
     "# features)\n",
-    "rfc_u_transform = fe.SelectFromModel(rfc_u, prefit=True)\n",
+    "rfc_u_transform = SelectFromModel(rfc_u, prefit=True)\n",
     "\n",
     "X_rfc_u = rfc_u_transform.transform(X)"
    ]
@@ -1462,16 +1472,15 @@
     }
    ],
    "source": [
-    "'''from stability_selection import (RandomizedLogisticRegression,\n",
-    "                                 RandomizedLasso, StabilitySelection,\n",
-    "                                 plot_stability_path)\n",
+    "# from stability_selection import (RandomizedLogisticRegression,\n",
+    "#                                  RandomizedLasso, StabilitySelection,\n",
+    "#                                  plot_stability_path)\n",
     "\n",
-    "# Stability selection using randomized lasso method\n",
-    "rl = RandomizedLasso(max_iter=2000)\n",
-    "rl_selector = StabilitySelection(base_estimator=rl, lambda_name='alpha',\n",
-    "                                 n_jobs=2)\n",
-    "rl_selector.fit(X, y);\n",
-    "'''"
+    "# # Stability selection using randomized lasso method\n",
+    "# rl = RandomizedLasso(max_iter=2000)\n",
+    "# rl_selector = StabilitySelection(base_estimator=rl, lambda_name='alpha',\n",
+    "#                                  n_jobs=2)\n",
+    "# rl_selector.fit(X, y);\n"
    ]
   },
   {
@@ -1515,8 +1524,6 @@
     }
    ],
    "source": [
-    "from sklearn.ensemble import ExtraTreesRegressor as ETR\n",
-    "\n",
     "# Stability selection using randomized decision trees\n",
     "etr = ETR(n_estimators=50).fit(X, y)\n",
     "\n",
@@ -1576,13 +1583,11 @@
     }
    ],
    "source": [
-    "from sklearn.linear_model import LinearRegression\n",
-    "\n",
     "# Recursive feature elimination with cross validaiton using linear regression \n",
     "# as the model\n",
     "lr = LinearRegression()\n",
     "# rank all features, i.e continue the elimination until the last one\n",
-    "rfe = fe.RFECV(lr)\n",
+    "rfe = RFECV(lr)\n",
     "rfe.fit(X, y)\n",
     "\n",
     "rfe_score = pd.Series(data=(-1*rfe.ranking_), name='RFE', index=names)\n",
@@ -1675,8 +1680,6 @@
     }
    ],
    "source": [
-    "from sklearn.ensemble import ExtraTreesClassifier as ETC\n",
-    "\n",
     "# Stability selection using randomized decision trees\n",
     "etc_b = ETC(n_estimators=50).fit(X, y_bal)\n",
     "\n",
@@ -1736,13 +1739,11 @@
     }
    ],
    "source": [
-    "from sklearn.linear_model import LogisticRegression\n",
-    "\n",
     "# Recursive feature elimination with cross validaiton using logistic regression \n",
     "# as the model\n",
     "logr_b = LogisticRegression(solver='lbfgs')\n",
     "# rank all features, i.e continue the elimination until the last one\n",
-    "rfe_b = fe.RFECV(logr_b)\n",
+    "rfe_b = RFECV(logr_b)\n",
     "rfe_b.fit(X, y_bal)\n",
     "\n",
     "rfe_b_score = pd.Series(data=(-1*rfe_b.ranking_), name='RFE_bal', index=names)\n",
@@ -1898,7 +1899,7 @@
     "# as the model\n",
     "logr_u = LogisticRegression(solver='lbfgs')\n",
     "# rank all features, i.e continue the elimination until the last one\n",
-    "rfe_u = fe.RFECV(logr_u)\n",
+    "rfe_u = fRFECV(logr_u)\n",
     "rfe_u.fit(X, y_un)\n",
     "\n",
     "rfe_u_score = pd.Series(data=(-1*rfe_u.ranking_), name='RFE_unbal', index=names)\n",
@@ -1908,7 +1909,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": null,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -1918,20 +1919,7 @@
     "id": "RND1UIMRo6kk",
     "outputId": "27838aac-d43b-40f8-a2b5-63718363f5ff"
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "\"RL_comparisons = pd.DataFrame(data=np.array([rl_selector.get_support(),\\n                                    rlr_b_selector.get_support(),\\n                                    rlr_u_selector.get_support()]).T,\\n                              columns=['RandomLasso', 'RandomLog_bal',\\n                                     'RandomLog_unbal'],\\n                              index=names)\\n\\nRL_comparisons\""
-      ]
-     },
-     "execution_count": 83,
-     "metadata": {
-      "tags": []
-     },
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "'''RL_comparisons = pd.DataFrame(data=np.array([rl_selector.get_support(),\n",
     "                                    rlr_b_selector.get_support(),\n",
@@ -2569,8 +2557,6 @@
     }
    ],
    "source": [
-    "from sklearn.preprocessing import MinMaxScaler\n",
-    "\n",
     "scaler = MinMaxScaler()\n",
     "scaled_df = scaler.fit_transform(comparisons)\n",
     "scaled_comparisons = pd.DataFrame(scaled_df, columns=comparisons.columns,\n",
@@ -2681,17 +2667,6 @@
     "\n",
     "## On the flip side, feature *interpretation* (Goal 2) can be done with all the data, before splitting, since you are looking to get a full understanding underlying the relationships in the dataset."
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 0,
-   "metadata": {
-    "colab": {},
-    "colab_type": "code",
-    "id": "Bc6bcXVrbPx9"
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
