--- a/08-Model-Validation/04b_Cross_Validation_and_Feature_Selection.ipynb
+++ b/08-Model-Validation/04b_Cross_Validation_and_Feature_Selection.ipynb
@@ -7,8 +7,6 @@
     "id": "3ctjQBseh0Cw"
    },
    "source": [
-    "_Lambda School Data Science - Model Validation_\n",
-    "\n",
     "## Example solution to the Cross-Validation assignment — plus Feature Selection!\n",
     "\n",
     "See also Sebastian Raschka's example, [Basic Pipeline and Grid Search Setup](https://github.com/rasbt/python-machine-learning-book/blob/master/code/bonus/svm_iris_pipeline_and_gridsearch.ipynb)."
@@ -1120,6 +1118,7 @@
      "height": 2729
     },
     "colab_type": "code",
+    "collapsed": true,
     "id": "TrMRGvezuDD7",
     "outputId": "fe17c04b-f3dc-4788-8eb4-76f238ce6fbd"
    },
@@ -1382,6 +1381,53 @@
     "# Use the grid search's score method with X_test_subset\n",
     "test_score = gs.score(X_test_subset, y_test)\n",
     "print('Test Score:', -test_score)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(18000, 25000.0)"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "stipend = (2000 * # per month\n",
+    "           9) # months\n",
+    "\n",
+    "min_pay = (0.10 * # percent\n",
+    "           50000 * # minimum salary \n",
+    "           5) # years\n",
+    "\n",
+    "stipend, min_pay"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.3888888888888889"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(25000 - 18000)/18000"
    ]
   }
  ],
