--- a/08-Model-Validation/03_Select_models_and_parameters.ipynb
+++ b/08-Model-Validation/03_Select_models_and_parameters.ipynb
@@ -15,6 +15,29 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%matplotlib inline\n",
+    "import matplotlib.pyplot as plt\n",
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "import seaborn as sns\n",
+    "from sklearn.ensemble import RandomForestRegressor #---NEW!\n",
+    "from sklearn.linear_model import Ridge #---------------NEW!\n",
+    "from sklearn.linear_model import LinearRegression\n",
+    "from sklearn.metrics import mean_absolute_error\n",
+    "from sklearn.model_selection import cross_validate\n",
+    "from sklearn.model_selection import GridSearchCV\n",
+    "from sklearn.model_selection import validation_curve\n",
+    "from sklearn.pipeline import make_pipeline\n",
+    "from sklearn.preprocessing import PolynomialFeatures #-NEW!\n",
+    "import statsmodels.api as sm"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {
     "colab_type": "text",
@@ -132,8 +155,6 @@
    "source": [
     "# Modified from cells 15, 16, and 20, at\n",
     "# https://jakevdp.github.io/PythonDataScienceHandbook/05.06-linear-regression.html#Example:-Predicting-Bicycle-Traffic\n",
-    "\n",
-    "import pandas as pd\n",
     "\n",
     "# Download and join data into a dataframe\n",
     "def load(): \n",
@@ -504,21 +525,8 @@
     "\n",
     "\n",
     "\n",
-    "I'll choose mean absolute error.\n",
+    "I'll choose **mean absolute error**.\n",
     "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 0,
-   "metadata": {
-    "colab": {},
-    "colab_type": "code",
-    "id": "1TqbomapSyRP"
-   },
-   "outputs": [],
-   "source": [
-    "from sklearn.metrics import mean_absolute_error"
    ]
   },
   {
@@ -690,8 +698,6 @@
     }
    ],
    "source": [
-    "%matplotlib inline\n",
-    "import seaborn as sns\n",
     "sns.distplot(y_train);"
    ]
   },
@@ -845,9 +851,6 @@
    },
    "outputs": [],
    "source": [
-    "from sklearn.linear_model import LinearRegression\n",
-    "from sklearn.model_selection import cross_validate\n",
-    "\n",
     "scores = cross_validate(LinearRegression(), X_train, y_train, \n",
     "                        scoring='neg_mean_absolute_error', cv=3, \n",
     "                        return_train_score=True, return_estimator=True)"
@@ -1103,7 +1106,6 @@
     }
    ],
    "source": [
-    "import statsmodels.api as sm\n",
     "model = sm.OLS(y_train, sm.add_constant(X_train))\n",
     "print(model.fit().summary())"
    ]
@@ -1154,11 +1156,6 @@
    "source": [
     "# Copied from cell 10 at\n",
     "# https://jakevdp.github.io/PythonDataScienceHandbook/05.03-hyperparameters-and-model-validation.html#Validation-curves-in-Scikit-Learn\n",
-    "\n",
-    "from sklearn.preprocessing import PolynomialFeatures\n",
-    "from sklearn.linear_model import LinearRegression\n",
-    "from sklearn.pipeline import make_pipeline\n",
-    "\n",
     "def PolynomialRegression(degree=2, **kwargs):\n",
     "    return make_pipeline(PolynomialFeatures(degree),\n",
     "                         LinearRegression(**kwargs))"
@@ -1259,11 +1256,6 @@
    "source": [
     "# Modified from cell 13 at\n",
     "# https://jakevdp.github.io/PythonDataScienceHandbook/05.03-hyperparameters-and-model-validation.html#Validation-curves-in-Scikit-Learn\n",
-    "\n",
-    "%matplotlib inline\n",
-    "import matplotlib.pyplot as plt\n",
-    "import numpy as np\n",
-    "from sklearn.model_selection import validation_curve\n",
     "\n",
     "degree = [0, 1, 2]\n",
     "train_score, val_score = validation_curve(\n",
@@ -1373,8 +1365,6 @@
     }
    ],
    "source": [
-    "from sklearn.model_selection import GridSearchCV\n",
-    "\n",
     "param_grid = {\n",
     "    'polynomialfeatures__degree': [0, 1, 2, 3]\n",
     "}\n",
@@ -1669,8 +1659,6 @@
     }
    ],
    "source": [
-    "from sklearn.ensemble import RandomForestRegressor\n",
-    "\n",
     "model = RandomForestRegressor(n_estimators=100, max_depth=20)\n",
     "\n",
     "scores = cross_validate(model, X_train, y_train, \n",
@@ -1720,11 +1708,6 @@
    "source": [
     "# Modified from cell 13 at\n",
     "# https://jakevdp.github.io/PythonDataScienceHandbook/05.03-hyperparameters-and-model-validation.html#Validation-curves-in-Scikit-Learn\n",
-    "\n",
-    "%matplotlib inline\n",
-    "import matplotlib.pyplot as plt\n",
-    "from sklearn.model_selection import validation_curve\n",
-    "\n",
     "model = RandomForestRegressor(n_estimators=100)\n",
     "\n",
     "depth = [2, 3, 4, 5, 6]\n",
@@ -2740,8 +2723,6 @@
    },
    "outputs": [],
    "source": [
-    "from sklearn.linear_model import Ridge\n",
-    "\n",
     "param_grid = {\n",
     "    'alpha': [0.1, 1.0 10.]\n",
     "}\n",
