--- a/11-Big-Data/02_Scala_for_Spark_Assignment.ipynb
+++ b/11-Big-Data/02_Scala_for_Spark_Assignment.ipynb
@@ -529,23 +529,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 103,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "\u001b[36mres54\u001b[39m: \u001b[32mInt\u001b[39m => \u001b[32mInt\u001b[39m = ammonite.$sess.cmd54$Helper$$Lambda$3019/121923870@1da1117e"
+       "\u001b[36mres102_0\u001b[39m: \u001b[32mInt\u001b[39m => \u001b[32mInt\u001b[39m = ammonite.$sess.cmd102$Helper$$Lambda$3585/1044129897@37de5114\n",
+       "\u001b[36mres102_1\u001b[39m: \u001b[32mInt\u001b[39m = \u001b[32m25\u001b[39m"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 103,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "// anonymous func\n",
-    "(x: Int) => x * x"
+    "(x: Int) => x * x\n",
+    "((x: Int) => x * x)(5)"
    ]
   },
   {
@@ -1102,7 +1104,7 @@
     "// Combinators\n",
     "val s = Set(1, 3, 7)\n",
     "def sq(x: Int) = x * x\n",
-    "s.map(sq)\n"
+    "s.map(sq)"
    ]
   },
   {
