flesh out notes

--- a/13-Tree-Ensembles/04-Gradient-Boosting.ipynb
+++ b/13-Tree-Ensembles/04-Gradient-Boosting.ipynb
@@ -4,11 +4,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "_Lambda School Data Science — Tree Ensembles_ \n",
-    "\n",
     "# Gradient Boosting\n",
     "\n",
-    "### Pre-reads\n",
+    "### Resources\n",
     "- [A Gentle Introduction to the Gradient Boosting Algorithm for Machine Learning](https://machinelearningmastery.com/gentle-introduction-gradient-boosting-algorithm-machine-learning/)\n",
     "- [A Kaggle Master Explains Gradient Boosting](http://blog.kaggle.com/2017/01/23/a-kaggle-master-explains-gradient-boosting/) — _Don’t worry about formulas/equations, but do see the good examples and explanations_\n",
     "- [_An Introduction to Statistical Learning_](http://www-bcf.usc.edu/~gareth/ISL/ISLR%20Seventh%20Printing.pdf) Chapter 8.2.3, Boosting:\n",
@@ -30,7 +28,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Python libraries with Gradient Boosting implementations\n",
+    "### Libraries with Gradient Boosting implementations\n",
     "- [scikit-learn — Gradient Tree Boosting](https://scikit-learn.org/stable/modules/ensemble.html#gradient-boosting)\n",
     "- [xgboost](https://xgboost.readthedocs.io/en/latest/)\n",
     "  - Anaconda: `conda install -c conda-forge xgboost`\n",
@@ -892,7 +890,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.1"
+   "version": "3.6.4"
   }
  },
  "nbformat": 4,
