--- a/13-Tree-Ensembles/02-Random-Forests.ipynb
+++ b/13-Tree-Ensembles/02-Random-Forests.ipynb
@@ -6,8 +6,16 @@
    "source": [
     "# Random Forests\n",
     "\n",
+    "### Objectives / Contents\n",
+    "- Random Forest vs. Decision Tree\n",
+    "- Out Of Bag Scores\n",
+    "- Feature Importances\n",
+    "  - Feature Importance\n",
+    "  - Drop Column Importance (\"Ablation\")\n",
+    "  - Permutation Importance\n",
+    "\n",
     "### Resources\n",
-    "- [Scikit-Learn User Guide, Ensemble Methods](https://scikit-learn.org/stable/modules/ensemble.html)\n",
+    "- [Scikit-Learn User Guide: Ensemble Methods](https://scikit-learn.org/stable/modules/ensemble.html)\n",
     "- [Coloring with Random Forests](http://structuringtheunstructured.blogspot.com/2017/11/coloring-with-random-forests.html)\n",
     "- [Beware Default Random Forest Importances](https://explained.ai/rf-importance/index.html)\n",
     "- Further Reading\n",
@@ -41,23 +49,18 @@
    "metadata": {},
    "source": [
     "## Libraries\n",
-    "- [eli5](https://github.com/TeamHG-Memex/eli5): `conda install -c conda-forge eli5` / `pip install eli5`\n",
-    "- [category_encoders](https://github.com/scikit-learn-contrib/categorical-encoding): `conda install -c conda-forge category_encoders` / `pip install category_encoders`\n",
-    "- [mlxtend](https://github.com/rasbt/mlxtend): `pip install mlxtend`\n",
-    "- [ipywidgets](https://ipywidgets.readthedocs.io/en/stable/examples/Using%20Interact.html): included with Anaconda, doesn't work on Google Colab"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## ipywidgets revisited: Decision Tree vs Random Forest"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "- [eli5](https://github.com/TeamHG-Memex/eli5)\n",
+    "  - `conda install -c conda-forge eli5`\n",
+    "  - `pip install eli5`\n",
+    "- [category_encoders](https://github.com/scikit-learn-contrib/categorical-encoding)\n",
+    "  - `conda install -c conda-forge category_encoders`\n",
+    "  - `pip install category_encoders`\n",
+    "- [mlxtend](https://github.com/rasbt/mlxtend)\n",
+    "  - `pip install mlxtend`\n",
+    "- [ipywidgets](https://ipywidgets.readthedocs.io/en/stable/examples/Using%20Interact.html): included with Anaconda, doesn't work on Google Colab\n",
+    "\n",
+    "## ipywidgets revisited: Decision Tree vs Random Forest\n",
+    "\n",
     "### Regressing a wave"
    ]
   },
@@ -537,13 +540,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Drop Column Importance / \"Ablation Study\""
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "## Drop Column Importance / \"Ablation Study\"\n",
+    "\n",
     "`sub_grade` and `int_rate` are highly correlated. If we drop one of those features, the model uses the other more, so the score remains similar."
    ]
   },
@@ -592,13 +590,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Permutation Importance"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "# Permutation Importance\n",
+    "\n",
     "Permutation Importance is a compromise between Feature Importance based on impurity reduction (which is the fastest) and Drop Column Importance (which is the \"best.\")\n",
     "\n",
     "[The ELI5 library documentation explains,](https://eli5.readthedocs.io/en/latest/blackbox/permutation_importance.html)\n",
