--- a/13-Tree-Ensembles/03-Model-Interpretation.ipynb
+++ b/13-Tree-Ensembles/03-Model-Interpretation.ipynb
@@ -21,31 +21,38 @@
     "\n",
     "\n",
     "### Libraries\n",
-    "- [PDPbox](https://github.com/SauceCat/PDPbox): `pip install pdpbox`\n",
-    "- [shap](https://github.com/slundberg/shap): `conda install -c conda-forge shap` / `pip install shap`\n",
-    "\n",
-    "  \n",
-    "### Types of explanations\n",
-    "\n",
-    "#### Global explanation: all features in relation to each other\n",
-    "- Feature Importances (mean decrease impurity)\n",
-    "- Permutation Importances\n",
-    "- Drop-Column Importances\n",
-    "\n",
-    "#### Global explanation: individual feature in relation to target\n",
-    "- Partial Dependence plots\n",
-    "\n",
-    "#### Individual prediction explanation\n",
-    "- Shapley Values\n",
-    "\n",
-    "_Note that the coefficients from a linear model give you all three types of explanations!_"
+    "- [PDPbox](https://github.com/SauceCat/PDPbox)\n",
+    "  - `pip install pdpbox`\n",
+    "- [shap](https://github.com/slundberg/shap)\n",
+    "  - `conda install -c conda-forge shap`\n",
+    "  - `pip install shap`"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Titanic"
+    "### Types of Explanations\n",
+    "\n",
+    "#### Global explanation: all features in relation to each other\n",
+    "- Feature Importances (mean decrease impurity)\n",
+    "- Permutation Importances\n",
+    "- Drop-Column Importances\n",
+    "\n",
+    "#### Global explanation: one or two individual features in relation to target\n",
+    "- Partial Dependence plots\n",
+    "\n",
+    "#### Individual prediction explanation\n",
+    "- Shapley Values\n",
+    "\n",
+    "_(in lineal models, coefficients provide all three types of explanation)_"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Example: Titanic Dataset"
    ]
   },
   {
@@ -397,7 +404,9 @@
   {
    "cell_type": "code",
    "execution_count": 37,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -525,11 +534,12 @@
     "from sklearn.model_selection import cross_val_score\n",
     "from sklearn.pipeline import make_pipeline\n",
     "\n",
-    "# Load data from https://www.kaggle.com/c/ds1-tree-ensembles/data\n",
-    "X_train = pd.read_csv('train_features.csv')\n",
-    "X_test = pd.read_csv('test_features.csv')\n",
-    "y_train = pd.read_csv('train_labels.csv')['charged_off']\n",
-    "sample_submission = pd.read_csv('sample_submission.csv')\n",
+    "# data from https://www.kaggle.com/c/ds1-tree-ensembles/data\n",
+    "data_dir = 'datasets/large/'\n",
+    "X_train = pd.read_csv(data_dir + 'train_features.csv')\n",
+    "X_test = pd.read_csv(data_dir + 'test_features.csv')\n",
+    "y_train = pd.read_csv(data_dir + 'train_labels.csv')['charged_off']\n",
+    "sample_submission = pd.read_csv(data_dir + 'sample_submission.csv')\n",
     "\n",
     "\n",
     "def wrangle(X):\n",
@@ -1172,8 +1182,7 @@
    "source": [
     "data_for_prediction = X_val.loc[33542]\n",
     "shap_values = explainer.shap_values(data_for_prediction)\n",
-    "shap.force_plot(explainer.expected_value, shap_values, data_for_prediction)\n",
-    "\n"
+    "shap.force_plot(explainer.expected_value, shap_values, data_for_prediction)"
    ]
   },
   {
@@ -1345,7 +1354,7 @@
    ],
    "source": [
     "# False negatives, with high (mistaken) confidence\n",
-    "preds[(y_val==1) & (y_pred==0)].sort_values(by='confidence', ascending=False).head()\n"
+    "preds[(y_val==1) & (y_pred==0)].sort_values(by='confidence', ascending=False).head()"
    ]
   },
   {
@@ -1384,8 +1393,8 @@
    "source": [
     "data_for_prediction = X_val.loc[30492]\n",
     "shap_values = explainer.shap_values(data_for_prediction)\n",
-    "shap.force_plot(explainer.expected_value, shap_values, data_for_prediction)\n",
-    "\n"
+    "shap.force_plot(explainer.expected_value, shap_values, \n",
+    "                data_for_prediction)"
    ]
   },
   {
@@ -1516,7 +1525,7 @@
     "data_for_prediction = X_val.loc[33095]\n",
     "shap_values = explainer.shap_values(data_for_prediction)\n",
     "shap.force_plot(explainer.expected_value, shap_values, \n",
-    "                data_for_prediction)\n"
+    "                data_for_prediction)"
    ]
   },
   {
