--- a/13-Tree-Ensembles/kaggle.ipynb
+++ b/13-Tree-Ensembles/kaggle.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -100,15 +100,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Load data from https://www.kaggle.com/c/ds2-tree-ensembles/data\n",
-    "X_train = pd.read_csv('datasets/kaggle-lending-club/train_features.csv')\n",
-    "X_test = pd.read_csv('datasets/kaggle-lending-club/test_features.csv')\n",
-    "y_train = pd.read_csv('datasets/kaggle-lending-club/train_labels.csv')['charged_off']\n",
-    "sample_submission = pd.read_csv('datasets/kaggle-lending-club/sample_submission.csv')"
+    "data_dir = 'datasets/large/'\n",
+    "X_train = pd.read_csv(data_dir + 'train_features.csv')\n",
+    "X_test = pd.read_csv(data_dir + 'test_features.csv')\n",
+    "y_train = pd.read_csv(data_dir + 'train_labels.csv')['charged_off']\n",
+    "sample_submission = pd.read_csv(data_dir + 'sample_submission.csv')"
    ]
   },
   {
