--- a/13-Tree-Ensembles/sprint_challenge.ipynb
+++ b/13-Tree-Ensembles/sprint_challenge.ipynb
@@ -102,7 +102,7 @@
     "    df.loc[df['Longitude'].isna(), 'Longitude'] = df['Longitude'].mean()\n",
     "    df.loc[df['Zip'].isna(), 'Zip'] = df['Zip'].median()\n",
     "    df = df.fillna('nan')\n",
-    "   \n",
+    "\n",
     "    return df\n",
     "\n",
     "\n",
@@ -122,7 +122,7 @@
     "        violations[f'violation_{x}'] = violations[0].apply(\n",
     "            lambda row: x in row\n",
     "        ).astype(int)\n",
-    "        \n",
+    "\n",
     "    violations = violations.drop(columns=[0])\n",
     "    violations['n_violations'] = violations.sum(axis=1)\n",
     "    df = df.drop(columns=['Violations'])\n",
@@ -131,7 +131,7 @@
     "    # fill nans\n",
     "    viol_cols = [col for col in df if 'violation' in col]\n",
     "    df[viol_cols] = df[viol_cols].fillna(0)\n",
-    "        \n",
+    "\n",
     "    return df"
    ]
   },
@@ -161,7 +161,8 @@
     "\n",
     "model = DecisionTreeClassifier(max_depth=2)\n",
     "\n",
-    "cross_val_score(model, X_train, y_train, cv=5, scoring='roc_auc', n_jobs=-1)"
+    "cross_val_score(model, X_train, y_train, cv=5, \n",
+    "                scoring='roc_auc', n_jobs=-1)"
    ]
   },
   {
